--- a/browser/client/containers/App/style.css
+++ b/browser/client/containers/App/style.css
@@ -23,29 +23,32 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  font: 16px/18px Primer, Arial, sans-serif;
 }
 
-.normal { padding: 2em;  }
-.normal dt { font-weight: bold;  }
-.normal dd { margin-bottom: 1em; }
+.normal {
+  padding: 2em;
+  font: 30px/32px Primer, Arial, sans-serif;
+  font-weight: 600;
+  text-align: center;
+}
 
-.normal table {
-  border: 1px solid #efefef;
+.normal h1 {
+  font-size: 38px;
+  text-align: center;
 }
-.normal table thead td {
-  font-size: 0.7em;
-  font-weight: bold;
-  border-bottom: 1px solid #efefef;
-  background-color: #aaaaaa;
+
+.normal .flame {
+  margin-top: 2em;
+  display: inline-block;
+  width: 300px;
+  height: 400px;
+  border: 2px dashed white;
 }
-.normal table tbody tr td:nth-child(1) {
-  text-align: right;
-  border-right: 1px dashed #e1e1e1;
+
+.normal .initial-copy {
+  display: flex;
 }
-.normal table td {
-  padding: 1em;
-}
-.normal table tr:nth-child(even) td {
-  background-color: rgba(255, 255, 255, 0.07);
+.normal .initial-copy > div {
+  padding: 2em;
+  text-align: left;
 }
