--- a/browser/client/containers/App/style.css
+++ b/browser/client/containers/App/style.css
@@ -40,9 +40,11 @@ body {
 .normal .flame {
   margin-top: 2em;
   display: inline-block;
-  width: 300px;
-  height: 400px;
-  border: 2px dashed white;
+  width: 270px;
+}
+.normal .flame img {
+  width: 100%;
+  height: auto;
 }
 
 .normal .info-section {
